--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
+### Node / JavaScript
+node_modules/
+dist/
+build/
+/.cache/
+.vite/
+/.parcel-cache/
+
+### Env files
+.env
+.env.*.local
+.env.local
+
+### Editor / OS
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+### Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+### Test coverage
+coverage/
+
+### TypeScript
+*.tsbuildinfo
+
+### Misc
+.history/
+/.next/
+out/
+/.vercel/
+/.firebase/
 # Logs
 logs
 *.log
