--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
@@ -65,6 +66,8 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@prerenderer/renderer-jsdom": "^4.0.0",
+    "@prerenderer/rollup-plugin": "^4.0.0",
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
